--- a/promo-timeline-app/src/styles.css
+++ b/promo-timeline-app/src/styles.css
@@ -969,6 +969,7 @@ textarea[disabled]:focus {
 .logoutButton,
 .updateButton,
 .upload-button,
+.AccessYellowButton,
 .login-box button {
     border: none;
     padding: 12px 20px;
@@ -1000,16 +1001,25 @@ textarea[disabled]:focus {
     color: white;
 }
 
+
 .updateButton:hover {
     background-color: #27ae60;
     transform: translateY(-1px);
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
+.AccessYellowButton{
+    background-color: #fbe62a;
+    color: black;
+    margin-top: 10px;
+}
+.AccessYellowButton:hover {
+    background-color: #ddcf4d;
+    transform: translateY(-1px);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
 .upload-button,
 .create-button {
-    /* Specific to Icon Picker */
-    background-color: #6c757d;
     color: white;
     padding: 8px 15px;
     /* Smaller padding */
@@ -1019,12 +1029,14 @@ textarea[disabled]:focus {
     /* Normal weight */
     box-shadow: none;
     border-radius: 4px;
-    /* No shadow */
 }
 
 .create-Button {
     background-color: #31d14c;
     color: white;
+    display: inline-block;
+
+
 
 }
 
@@ -1517,6 +1529,8 @@ em-emoji-picker {
 .header-promo {
     position: relative;
     text-align: center;
+    display: grid;
+    grid-template-columns: 4fr 1fr;   
 }
 
 .custom-multiselect {
